--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,12 @@
             <artifactId>guava</artifactId>
             <version>25.0-jre</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.7</version>
+        </dependency>
     </dependencies>
+
 
 </project>
